# rental-marketplace

./: .env.example  components.json  package-lock.json  package.json
api/: .gitignore  config.toml  db.dbml  pyproject.toml
api/api/: app.py  cloudinary.py  crypto.py  curr.dbml  database.py  embedding.py  jwt.py  lifespan.py  logging.py  main.py  middleware.py  sentry.py
api/api/addresses/: dependencies.py  exceptions.py  repository.py  router.py  service.py
api/api/categories/: dependencies.py  exceptions.py  repository.py  router.py  service.py
api/api/defects/: __init__.py  dependencies.py  repository.py  router.py  service.py
api/api/exceptions/: app.py  handler.py
api/api/models/: errors.py  pagination.py
api/api/orders/: __init__.py  dependencies.py  exceptions.py  pdf.py  repository.py  router.py  service.py
api/api/payments/: dependencies.py  exceptions.py  repository.py  router.py  service.py
api/api/products/: dependencies.py  exceptions.py  repository.py  router.py  service.py
api/api/promos/: dependencies.py  exceptions.py  repository.py  router.py  service.py
api/api/reviews/: __init__.py  dependencies.py  repository.py  router.py  service.py
api/api/settings/: __init__.py  cloudinary.py  database.py  encryption.py  jwt.py  search.py  server.py  settings.py  stripe.py
api/api/users/: dependencies.py  (+4 more)
api/migrations/: V2__user_tables.sql  V3__categories_products_devices.sql  V4__addresses_payments_promos_wishlists.sql  V5__orders.sql  V6__hybrid_search.sql  V7__enhanced_hybrid_search_categories.sql  V8__reviews_and_defects.sql
(+182 files in other folders)
