[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "argon2-cffi>=23.1.0",
    "cloudinary>=1.41.0",
    "fastapi>=0.135.1",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.20",
    "sentry-sdk>=2.54.0",
    "structlog>=25.5.0",
    "uvicorn>=0.41.0",
    "shapely>=2.1.2",
    "pycryptodome>=3.23.0",
]
